# EEEE2052-Electronic-Project-RS2

./: .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
src/: adc.rs  comparator.rs  lcd.rs  lib.rs  main.rs  utilities.rs
