[package]
authors = ["ecyht2 <ecyht2@nottingham.edu.my>"]
name = "doppler-radar"
edition = "2021"
version = "0.1.0"

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }

cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"

# Change this import as required for your MCU.
stm32l4xx-hal = { version = "0.7.1", features = ["stm32l476"], git = "https://github.com/jspngh/stm32l4xx-hal.git", branch = "feature/L47x-L48x_ADC"}
rtt-target = "0.4.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"]}
hd44780-driver = "0.4.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
